--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
  <h3>source: <sub>     kaggle </h3>
   <h3>authors: <sub>    Kasim, Greer, Charania </h3>
 
-<h2>Github repo :<a href="https://github.com/aargreer/cloudproject">link text</a>
+<h2>Github repo :<a href=https://github.com/dulzK/cloud-project.git>link text</a>
 
 <h4>data_processing and modelling </h4>
 <h7> the link above send you the repo where the data_processing file is located,<p1>which will consist of some preprocessing techniques like chequing for null data,
