--- a/templates/about.html
+++ b/templates/about.html
@@ -3,14 +3,14 @@
 {% block content %}
                         
                         <h2>group members include</h2>
-                        <p> abdulbasit kasim <br>
+                        <p> abdulbasit Kasim <br>
                             Andrew Greer <br>
-                            aqueel charania </p>
+                            Aqeel charania </p>
                             
 
                          
                            <h2>group members     -               workload divsion                             </h2>
-                             <p>Abdulbasit kasim - Data handling and modelling, HTML                          </p>
+                             <p>Abdulbasit Kasim - Data handling and modelling, HTML                          </p>
                               <p>Andrew Greer    - Data modelling and deployment to Google App Engine         </p>
-                              <p>aqueel charania - HTML and uploading inference data to Google cloud storage  </p>       </div>                                       
+                              <p>Aqeel charania - HTML and uploading inference data to Google cloud storage  </p>       </div>                                       
                     {% endblock %}
