--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 {% block content %}
                         
                         <h2>group members include</h2>
-                        <p> abdulbasit Kasim <br>
+                        <p> Abdulbasit Kasim <br>
                             Andrew Greer <br>
                             Aqeel charania </p>
                             
