--- a/templates/base.html
+++ b/templates/base.html
@@ -14,16 +14,25 @@
 	</head>
 	<body> 
 		<nav class="navbar navbar-expand-md navbar-light bg-light"> 
-			<a class="navbar-brand" href="{{ url_for('index')}}">Main</a> 
+			
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"> 
 				<span class="navbar-toggler-icon"></span> 
 			</button> 
-			<div class="collapse navbar-collapse" id="navbarNav"> 
+            <a class="navbar-brand" href="{{ url_for('index')}}">Main</a> 
+            
+			<div class= "collapse navbar-collapse" id="navbarNav" > 
 				<ul class="navbar-nav"> 
 				<li class="nav-item active"> 
-					<a class="nav-link" href="/about">About</a>
-					<a class="nav-link" href="/inference">inference</a>
-					<a class="nav-link" href="/history">History</a>
+                    <div class="d-inline-flex p-2 bd-highlight">
+                        <div class="p-2 bd-highlight">
+                        <a class="nav-link" href="/about">About</a></div>
+                    </div>
+                    <div class="d-inline-flex p-2 bd-highlight">
+                        <div class="p-2 bd-highlight"><a class="nav-link" href="/inference">Inference</a></div>
+                    </div>
+					<div class="d-inline-flex p-2 bd-highlight">
+                        <div class="p-2 bd-highlight"><a class="nav-link" href="/history">History</a></div>
+                    </div>
 				</li> 
 				</ul>
 			</div> 
