--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,10 @@
 				<li class="nav-item active"> 
                     <div class="d-inline-flex p-2 bd-highlight">
                         <div class="p-2 bd-highlight">
+                            <div class="align-self-center">
                         <a class="nav-link" href="/about">About</a></div>
                     </div>
+                        </div>
                     <div class="d-inline-flex p-2 bd-highlight">
                         <div class="p-2 bd-highlight"><a class="nav-link" href="/inference">Inference</a></div>
                     </div>
