--- a/templates/base.html
+++ b/templates/base.html
@@ -25,16 +25,18 @@
 				<li class="nav-item active"> 
                     <div class="d-inline-flex p-2 bd-highlight">
                         <div class="p-2 bd-highlight">
-                            <div class="align-self-center">
+                            <div class="align-self-start">
                         <a class="nav-link" href="/about">About</a></div>
                     </div>
                         </div>
                     <div class="d-inline-flex p-2 bd-highlight">
+                        <div class="align-self-start">
                         <div class="p-2 bd-highlight"><a class="nav-link" href="/inference">Inference</a></div>
-                    </div>
+                        </div></div>
 					<div class="d-inline-flex p-2 bd-highlight">
+                        <div class="align-self-start">
                         <div class="p-2 bd-highlight"><a class="nav-link" href="/history">History</a></div>
-                    </div>
+                        </div></div>
 				</li> 
 				</ul>
 			</div> 
