--- a/templates/about.html
+++ b/templates/about.html
@@ -2,15 +2,17 @@
 
 {% block content %}
                         
-                        <h2>group members include</h2>
+                        <h2>Group Members Include</h2>
                         <p> Abdulbasit Kasim <br>
                             Andrew Greer <br>
                             Aqeel charania </p>
                             
 
                          
-                           <h2>group members     -               workload divsion                             </h2>
-                             <p>Abdulbasit Kasim - Data handling and modelling, HTML                          </p>
-                              <p>Andrew Greer    - Data modelling and deployment to Google App Engine         </p>
-                              <p>Aqeel charania - HTML and uploading inference data to Google cloud storage  </p>       </div>                                       
+                           <h2>Group Members     -               Workload Divsion                             </h2>
+                             <p>Abdulbasit Kasim- Programming the ML model, HTML, SQL.
+                         </p>
+                              <p>Andrew Greer- Programming model, deployment to Google App Engine, solved errors.
+       </p>
+                              <p>Aqeel Charania-HTML, deploying GCE, Docker file, PPT.  </p>                                              
                     {% endblock %}
