--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1>Welcome to the data prediction software </h1>
+<h1>Welcome to the Data Prediction Software </h1>
  <h3>Data:   <sub>      medical cost personal dataset            </h3>
  <h3>source: <sub>     kaggle </h3>
   <h3>authors: <sub>    Kasim, Greer, Charania </h3>
