--- a/templates/about.html
+++ b/templates/about.html
@@ -5,7 +5,7 @@
                         <h2>Group Members Include</h2>
                         <p> Abdulbasit Kasim <br>
                             Andrew Greer <br>
-                            Aqeel charania </p>
+                            Aqeel charania123 </p>
                             
 
                          
